--- a/css/home.css
+++ b/css/home.css
@@ -1,20 +1,181 @@
-* {
-  margin: 0;
+.main {
+  width: 100%;
+}
+
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 12.5% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 40%;
   padding: 0;
-  box-sizing: border-box;
 }
 
-@font-face {
-  font-family: QatarMedium;
-  src: url(../font/GraphikArabicMedium.otf);
-}
-
-@font-face {
-  font-family: QatarBold;
-  src: url(../font/Qatar2022Arabic-Bold.ttf);
-}
-
-@font-face {
+.title {
+  display: flex;
+  justify-content: center;
+  background-color: #9A1032;
+  border-radius: 10px 10px 0 0;
+  color: #fefefe;
+  font-size: 20px;
   font-family: QatarHeavy;
-  src: url(../font/Qatar2022Arabic-Heavy.ttf);
+}
+
+.subtitles {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+
+.subtitles-text {
+  color: #9A1032;
+  font-family: QatarBold;
+  width: 800px;
+  text-align: center;
+}
+
+.subtitles-line {
+  border: 1px solid #9A1032;
+  width: 100%;
+}
+
+.group {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.modalSpace {
+  height: 15px;
+}
+
+.buttons {
+  padding: 2px 10px 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+
+.button {
+  display: flex;
+  border: 2px solid #9A1032;
+  border-radius: 20px;
+  font-family: QatarBold;
+  width: 160px;
+  height: 35px;
+  color: #9A1032;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.options {
+  width: 100px;
+}
+
+.iniciar {
+  width: 90%;
+  margin: auto;
+}
+
+.time {
+  display: flex;
+  background-color: #9A1032;
+  align-items: center;
+  color: white;
+  gap: 5px;
+}
+
+.button:hover {
+  background-color: #9A1032;
+  color: white;
+}
+
+.activate {
+  background-color: #9A1032;
+  color: white;
+}
+
+.cards {
+  display: grid;
+  height: calc(100% - 45px);
+  width: 60%;
+  margin: 3px 10px 3px 10px;
+  gap: 2px;
+}
+
+.card {
+  width: 100%;
+  aspect-ratio: 4/3;
+  background-color: #9A1032;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 400ms ease;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+/* .contorno {
+  align-self: center;
+  width: 85%;
+  height: 82%;
+  border-radius: 5px;
+  border: 2px solid white;
+  position: relative;
+} */
+
+.face {
+  background-color: #9A1032;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: all 400ms ease;
+}
+
+.front {
+  /* background-image: url('../img/bandeiras/bra.png'); */
+}
+
+.front img {
+  height: 100%;
+  width: auto;
+  align-self: center;
+  border-radius: 5px;
+}
+
+.back {
+  backface-visibility: hidden;
+}
+
+.back img {
+  width: 20px;
+  height: auto;
+  align-self: center;
+}
+
+.showCard {
+  transform: rotateY(180deg);
+}
+
+.got-right {
+  filter: saturate(0);
+  opacity: 0.5;
 }
