--- a/css/sideBar.css
+++ b/css/sideBar.css
@@ -1,7 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  border: none;
   box-sizing: border-box;
+  list-style: none;
 }
 
 @font-face {
@@ -17,4 +19,106 @@
 @font-face {
   font-family: QatarHeavy;
   src: url(../font/Qatar2022Arabic-Heavy.ttf);
+}
+
+.page {
+  display: flex;
+  height: 100%;
+}
+
+.main {
+  margin-left: 50px;
+}
+
+.side-bar {
+  background-color: #9A1032;
+  margin: auto;
+  align-items: center;
+  z-index: 100;
+  position: fixed;
+  padding: 4px;
+  height: 100%;
+  cursor: pointer;
+}
+
+.space {
+  height: 2px;
+  width: 100%;
+  background-color: white;
+}
+
+.side-bar,
+.side-bar a {
+  text-decoration: none;
+  color: white;
+  font-family: QatarBold;
+}
+
+img {
+  width: 35px;
+  height: auto;
+}
+
+.logout {
+  transform: rotate(180deg);
+}
+
+.collapse {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  height: 100%;
+
+  transition: all 0.5s ease;
+  width: 40px !important;
+}
+
+.show {
+  display: none;
+}
+
+.expanded {
+  transition: all 0.5s ease;
+  width: 220px !important;
+}
+
+.expanded .show {
+  padding: 16px;
+  display: block;
+}
+
+.line {
+  display: flex;
+  align-items: center;
+  height: 55px;
+}
+
+.logo {
+  height: 85px;
+}
+
+.line:hover {
+  background-color: #D61645;
+  width: 220px;
+  border-radius: 6px;
+}
+
+.line:hover>.show {
+  display: block;
+  padding: 16px;
+}
+
+.selected {
+  background-color: #D61645;
+  border-radius: 6px;
+  width: 40px !important;
+  height: 55px !important;
+}
+
+.selected-expanded {
+  background-color: #D61645;
+  border-radius: 6px;
+  /* width: 220px !important; */
+  height: 55px !important;
 }
